--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
   "name": "oss_uploader",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "oss uploader",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://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@github.com/visionwx/oss_uploader.git"
+  },
+  "keywords": [
+    "oss uploader"
+  ],
+  "author": "VisionWX",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.2",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.3"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
