--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/visionwx/oss_uploader.git"
+    "url": "git+https://github.com/visionwx/oss_uploader.git"
   },
   "keywords": [
     "oss uploader"
