--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "VisionWX",
   "license": "ISC",
   "devDependencies": {
+    "@types/ali-oss": "^6.0.11",
     "@types/jest": "^27.0.2",
     "jest": "^27.2.2",
     "prettier": "^2.4.1",
@@ -35,5 +36,8 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "ali-oss": "^6.16.0"
+  }
 }
