--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/jquery": "^3.5.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
@@ -31,6 +32,7 @@
     "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
-    "@vision_intelligence/oss_uploader": "^1.0.2"
+    "@vision_intelligence/oss_uploader": "^1.0.4",
+    "jquery": "^3.6.0"
   }
 }
