--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "ts-jest": "^27.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "files": [
     "lib/**/*"
