优化ali-oss引入方式，直接使用aliyun-oss-sdk.min.js, 解决node引入的代码压缩错误

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "build": "tsc",
+    "build": "tsc && node copy.js",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
@@ -39,7 +39,6 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.37.0",
-    "ali-oss": "^6.16.0"
+    "@aws-sdk/client-s3": "^3.37.0"
   }
 }
