--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/jquery": "^3.5.6",
+    "axios": "^0.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
@@ -32,7 +33,6 @@
     "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
-    "@vision_intelligence/oss_uploader": "^1.0.14",
     "jquery": "^3.6.0"
   }
 }
