--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vision_intelligence/oss_uploader",
-  "version": "1.0.16",
+  "version": "1.1.0",
   "description": "oss uploader",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,7 +8,7 @@
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "build": "tsc && node copy.js",
+    "build": "tsc",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
